Adding content provider
content provider classes and floatting button to add movies to favorite list.

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -20,6 +20,12 @@
             </intent-filter>
         </activity>
         <activity android:name=".DetailsActivity"></activity>
+
+        <provider
+            android:name="com.example.lcout.mymovies.data.FavouriteContentProvider"
+            android:authorities="com.example.lcout.mymovies"
+            android:exported="false"/>
+
     </application>
 
 </manifest>
